Issue [#178](https://github.com/livecomposer/live-composer-page-builder/issues/178): TinyMCE inline link popup has a wrong position.

--- a/css/builder/builder.main.css
+++ b/css/builder/builder.main.css
@@ -23,6 +23,11 @@ body.toplevel_page_livecomposer_editor {
 	background: #464646;
 }
 
+/* Temporary and dirty fix for bug with wrong position for TinyMCE link inline popup */
+body div.mce-inline-toolbar-grp.mce-arrow-up {
+	margin-top: 48px;
+}
+
 /* Re-enable text selection for text-based modules */
 
 .inline-editor,
